# FAD-Toolset

./: LICENSE  README.md  fad-env.yaml  famodel-env.yaml  pyproject.toml
.github/workflows/: CI_FAD.yml  CI_FAModel.yml
examples/: IEA-15-240-RWT.yaml  OntologySample200m.yaml  OntologySample200m_1turb.yaml  OntologySample200m_uniformArray.yaml  OntologySample200mbis_1turb.yaml  OntologySample600m_shared.yaml  OntologySample_RM3.yaml  README.md  example_driver.py
examples/01_Visualization/: 01_2D-visual_turbine_locations.py  01_2D-visual_turbine_locations.yaml  02_visual_moorings.py  02_visual_moorings.yaml  03_visual_cables.py  03_visual_cables.yaml  04_visual_bathymetry.py  04_visual_bathymetry.yaml  05_visual_lease_boundaries.py  06_2D-visual_misc_platforms.py  06_2D-visual_misc_platforms.yaml  07_3D-visual_platform.py  07_3D-visual_platform.yaml  08_3D-visual_turbine.py  08_3D-visual_turbine.yaml  09_2D-visual_soil.py  09_2D-visual_soil.yaml  10_2D-visual_soil_bathy-contours.py  10_2D-visual_soil_bathy-contours.yaml  11_2D-visual_all_options.py  11_2D-visual_all_options.yaml
examples/02_Mooring_Analysis_MoorPy/: 01_moorings.py  01_moorings.yaml  02_moorings_cables.py  (+8 more)
fad/: README.md  __init__.py  _project_helper.py  famodel_base.py  geography.py  helpers.py  project.py  seabed_tools.py
famodel/: README.md  _project_helper.py  famodel_base.py  helpers - Copy.py  helpers.py  project.py
tests/: simple_farm.yaml  testOntology.yaml  test_LineDesign.py  test_anchors.py  test_integrations.py  test_moorings.py  test_platform.py  test_project.py
(+114 files in other folders)
